<resources>
    <string name="app_name">AndroidBackground</string>
    <string name="address">Address:</string>
    <string name="download_info">DOWNLOAD INFO</string>
    <string name="default_file_size">0</string>
    <string name="file_size">File size:</string>
    <string name="file_type">File type:</string>
    <string name="none">none</string>
    <string name="download_file">DOWNLOAD FILE</string>
    <string name="bytes_downloaded">Bytes downloaded:</string>
    <string name="test_address">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>
    <string name="notification_title">Downloading a file</string>
    <string name="bad_url">Incorrect web address</string>
    <string name="notification_finished">Finished file downloading</string>
    <string name="notification_error">Error during downloading</string>
    <string name="permission_rationale">File cannot be downloaded without permission</string>
</resources>